feat: added switch
for image processing

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,5 +78,11 @@
         android:text="Age in minutes"
         android:textSize="18sp"/>
 
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Switch" />
+
 
 </LinearLayout>
